<resources>
    <string name="enter_your_registered_email">Enter your registered email</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have
        the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Ocr dependencies cannot be downloaded
        due to low device storage</string>
    <string name="openNavDrawer">Navigation Drawer Open</string>
    <string name="closeNavDrawer">Navigation Drawer Close</string>
    <string name="searching_for_kks">SEARCHING FOR KKS</string>
    <string name="forget_password2">Forget password</string>
    <string name="password">Password</string>
    <string name="home">Home</string>
    <string name="email">Email</string>
    <string name="electrical_maintenance">Electrical maintenance</string>
    <string name="i_amp_c_maintenance"><![CDATA[I&C maintenance]]></string>
    <string name="mechanical_maintenance">Mechanical maintenance</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register2">Register</string>
    <string name="login2">Login</string>
    <string name="forgot_password2">Forgot password</string>
    <string name="terms_privacy_policy2"><![CDATA[ terms & privacy policy]]></string>
    <string name="search">SEARCHING FOR KKS</string>
    <string name="digitomstr">Digitom</string>
    <string name="todo">PictureDescription</string>
    <string name="slc">SLC</string>
    <string name="_42mbv21ap001">42MBV21Ap001</string>
    <string name="background">background</string>
    <string name="job_title">Job title</string>
    <string name="line">line</string>
    <string name="phone_number">Phone number</string>
    <string name="change_passwords">Change password</string>
    <string name="signout">Signout</string>
    <string name="save">Save</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="username">User name</string>
    <string name="profile_img">profile_img</string>
    <string name="choose_gallery">Choose from gallery</string>
    <string name="take_photo">Take photo</string>
    <string name="Cancel">Cancle</string>
    <string name="error_message_no_more_space">No Space</string>
    <string name="error_message_insufficient_space">No sufficient space</string>
    <string name="error_message">Error occurred!</string>
    <string name="message_need_permission">Need permissions</string>
    <string name="message_grant_permission">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="label_setting">Goto settings</string>
    <string name="cancel">Cancel</string>
    <string name="app_name">In-App-Update-Example</string>
    <string name="update">Update</string>
    <string name="later">Later</string>
    <string name="install">Install</string>
    <string name="app_update_available">Digitom Update Available</string>
    <string name="app_update_downloaded">Digitom Update Downloaded</string>
    <string name="app_update_available_message">We have fixed some issues and added some  features in this update</string>
    <string name="downloading">Downloading…</string>
    <string name="installing_update">Installing Updates</string>
    <string name="in_app_update">Digitom</string>
</resources>
