<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/constrain_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/searchline">


    <ImageButton
            android:id="@+id/imageView6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/buttonselector"
            android:contentDescription="@string/background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/kkstext2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/siemens"
            android:importantForAccessibility="no"
            android:isScrollContainer="true"
            android:keepScreenOn="false"
            android:padding="10dp"
            android:text="@string/_42mbv21ap001"
            android:textColor="#2D373C "
            android:textCursorDrawable="@drawable/black"
            android:textIsSelectable="false"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/kksdescription2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/kksdescription2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:paddingStart="12dp"
            android:paddingLeft="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:text="@string/slc"
            android:textColor="#2D373C "
            android:textIsSelectable="true"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/kkstext2" />
</androidx.constraintlayout.widget.ConstraintLayout>
