<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        tools:ignore="Overdraw">

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.11" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.50" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="1.0" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="1.0" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.885" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.115" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.184" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.816" />

    <ProgressBar
            android:id="@+id/Progressbar"
            style="?android:attr/progressBarStyle"
            android:layout_width="40dp"
            android:layout_height="36dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/guideline75"
            app:layout_constraintEnd_toStartOf="@+id/guideline10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline74" />

    <View
            android:layout_width="395dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline13"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="365dp" />

    <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/shadow"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintEnd_toStartOf="@+id/guideline10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.28" />

    <EditText
            android:id="@+id/headtext3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/backgroundcolor"
            android:enabled="false"
            android:fontFamily="@font/siemens"
            android:foregroundGravity="center_vertical|clip_horizontal|center_horizontal"
            android:gravity="center|center_horizontal"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:paddingBottom="8dp"
            android:text="@string/forget_password2"
            android:textAllCaps="false"
            android:textColor="#697882"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline70"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="LabelFor,TextFields" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.635" />


    <ImageView

            android:id="@+id/imageView7"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:background="@drawable/backgroundcolor"
            android:baselineAlignBottom="true"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintEnd_toStartOf="@+id/guideline12"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline15"
            app:layout_constraintTop_toTopOf="@+id/guideline2"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="ContentDescription" />

    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:textCursorDrawable="@drawable/black"
            app:layout_constraintBottom_toTopOf="@+id/guideline63"
            app:layout_constraintEnd_toStartOf="@+id/guideline17"
            app:layout_constraintStart_toStartOf="@+id/guideline16"
            app:layout_constraintTop_toTopOf="@+id/guideline61">

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password1layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:textColorHint="#D3D3D3"
                app:endIconMode="password_toggle"
                app:errorEnabled="false"
                app:errorTextColor="@null"
                app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/angle4"
                    android:fontFamily="@font/siemens"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:textColor="#1B1534"
                    android:textColorHighlight="@null"
                    android:textColorHint="#C7C7C7"
                    android:textColorLink="@null"
                    android:textCursorDrawable="@drawable/black"
                    android:textIsSelectable="false"
                    android:textSize="18sp"
                    android:textStyle="normal"
                    tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:textCursorDrawable="@drawable/black"
            app:layout_constraintBottom_toTopOf="@+id/guideline74"
            app:layout_constraintEnd_toStartOf="@+id/guideline17"
            app:layout_constraintStart_toStartOf="@+id/guideline16"
            app:layout_constraintTop_toTopOf="@+id/guideline73">

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:textColorHint="#D3D3D3"
                app:endIconMode="password_toggle"
                app:errorEnabled="false"
                app:errorTextColor="@null"
                app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/angle4"
                    android:fontFamily="@font/siemens"
                    android:hint="@string/confirm_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:textColor="#1B1534"
                    android:textColorHighlight="@null"
                    android:textColorHint="#C7C7C7"
                    android:textColorLink="@null"
                    android:textCursorDrawable="@drawable/black"
                    android:textIsSelectable="false"
                    android:textSize="18sp"
                    android:textStyle="normal"
                    tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline61"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".336" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline63"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".383" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline73"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".396" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline74"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".443" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline75"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.53214777" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline76"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5759234" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline70"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.06" />

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/headtext3"
            app:layout_constraintEnd_toStartOf="@+id/guideline10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/backgroundcolor"
            tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

    <ImageButton
            android:id="@+id/fback"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackground"
            android:soundEffectsEnabled="true"
            app:layout_constraintBottom_toBottomOf="@+id/headtext3"
            app:layout_constraintEnd_toStartOf="@+id/guideline15"
            app:layout_constraintStart_toStartOf="@+id/headtext3"
            app:layout_constraintTop_toTopOf="@+id/headtext3"
            app:srcCompat="@drawable/back2"
            tools:ignore="ContentDescription,VectorDrawableCompat" />

    <Button
            android:id="@+id/changePassword"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/buttoncolors"
            android:fontFamily="@font/siemensbold"
            android:includeFontPadding="false"
            android:text="Change Password"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/guideline76"
            app:layout_constraintEnd_toStartOf="@+id/guideline17"
            app:layout_constraintStart_toStartOf="@+id/guideline16"
            app:layout_constraintTop_toTopOf="@+id/guideline75"
            app:layout_constraintVertical_bias="0.84000003" />

</androidx.constraintlayout.widget.ConstraintLayout>